# embedease-ai

./: .dockerignore  .gitignore  CHANGELOG.md  GETTING_STARTED.md  README.md  docker-compose.prod.yml  docker-compose.yml  frontend-component-design.skill  install.sh  package.json  pnpm-lock.yaml  quick-start.sh  test_script.sh  update_version.py  version.sh  version_fixed.sh  version_minimal.sh  version_simple.sh
backend/: .dockerignore  .env.example  Dockerfile  README.md  migrate_env.py  pyproject.toml
backend/.env.json.example/: CORS_ORIGINS.README.md  CORS_ORIGINS.json  CRAWLER_SITES_JSON.README.md  CRAWLER_SITES_JSON.json  DEFAULT_AGENTS_JSON.README.md  DEFAULT_AGENTS_JSON.json  MODEL_PROFILES_JSON.README.md  MODEL_PROFILES_JSON.json  README.md
backend/app/: main.py
backend/app/core/: chat_models.py  config.py  crawler_database.py  database.py  dependencies.py  error_reporter.py  errors.py  health.py  health_checks.py  llm.py  logging.py  models_dev.py  rerank.py
backend/app/core/chat_models/: README.md  __init__.py  base.py  registry.py
backend/app/core/db/: __init__.py  checkpointer.py  provider.py  store.py
backend/app/models/: __init__.py  agent.py  app_metadata.py  conversation.py  crawler.py  message.py  product.py  prompt.py  skill.py  tool_call.py
backend/app/prompts/: __init__.py  registry.py  schemas.py
backend/app/prompts/defaults/: __init__.py  agent.py  crawler.py  memory.py  skill.py
backend/app/repositories/: __init__.py  conversation.py  crawler.py  message.py  product.py  tool_call.py
backend/app/routers/: __init__.py  admin.py  agents.py  chat.py  conversations.py  crawler.py  health.py  ocr.py  prompts.py  quick_setup.py  skills.py  support.py  system.py  system_config.py  upload.py  ws.py
backend/app/scheduler/: README.md  __init__.py  registry.py  runner.py  scheduler.py
backend/app/scheduler/routers/: __init__.py  tasks.py
backend/app/scheduler/state/: __init__.py  models.py
backend/app/scheduler/tasks/: __init__.py  base.py  crawl_site.py
backend/app/schemas/: __init__.py  admin.py  agent.py  chat.py  conversation.py  crawler.py  effective_config.py  events.py  intent.py  product.py  quick_setup.py  recommendation.py  skill.py  stream.py  suggested_question.py  support.py  system_config.py  websocket.py
backend/app/services/: catalog_profile.py  chat_stream.py  chat_stream_adapter.py  chat_stream_legacy.py  chat_stream_sdk.py  conversation.py  system_config.py
backend/app/services/agent/: __init__.py  agent.py  bootstrap.py  effective_config.py  enhanced_retriever.py  intent_analyzer.py  retriever.py
backend/app/services/crawler/: __init__.py  crawler_service.py  page_parser.py  scheduler.py  site_initializer.py  utils.py
backend/app/services/knowledge/: __init__.py  factory.py  faq_retriever.py  kb_retriever.py
backend/app/services/memory/: README.md  fact_memory.py  graph_memory.py  profile_service.py  prompts.py  store.py  vector_store.py
backend/app/services/ocr/: __init__.py  base.py  factory.py  mineru.py  paddlex.py  rapid_ocr.py
backend/app/services/quick_setup/: __init__.py  (+3 more)
backend/app/utils/: text.py
backend/data/: products.json  quick_setup_state.json
backend/doc/: agent.md
backend/script/: test-langchain-openai.py  test-openai.py  test-response-sanitization.py  verify-middleware-integration.py
backend/scripts/: clean_qdrant.py  filter_logs.sh  import_products.py
backend/tests/: README.md  conftest.py  test_catalog_profile.py  test_llm_call_sse_middleware.py  test_llm_logging_middleware.py  test_reasoning_content_injection.py  test_response_sanitization.py
backend/tests/core/: test_config.py  test_errors.py
backend/tests/integration/: README.md  __init__.py
backend/tests/models/: __init__.py  test_conversation.py
backend/tests/prompts/: __init__.py  test_api.py  test_defaults.py  test_registry.py
backend/tests/repositories/: __init__.py  test_base.py
backend/tests/routers/: test_skills.py
backend/tests/schemas/: __init__.py  test_agent.py  test_chat.py  test_events.py  test_skill.py  test_websocket.py
backend/tests/services/: __init__.py  test_conversation.py  test_skill.py  test_skill_injector.py  test_streaming.py  test_supervisor_config.py
(+355 files in other folders)
