[project]
name = "embed-ai-agent"
version = "0.1.11"
description = "商品推荐 Agent - 基于 LangChain v1.1"
requires-python = ">=3.13"

dependencies = [
  "aiofiles>=24.1.0",
  "aiosqlite>=0.22.0",
  "apscheduler>=3.10.0",
  "beautifulsoup4>=4.12.0",
  "croniter>=2.0.0",
  "fastapi>=0.124.4",
  "greenlet>=3.1.1",
  "langchain>=1.1.3",
  "langchain-openai>=1.1.3",
  "langchain-qdrant>=1.1.0",
  "langchain-text-splitters>=1.1.0",
  "langgraph>=1.0.5",
  "langgraph-supervisor>=0.0.11",
  "langgraph-checkpoint-sqlite>=3.0.1",
  "langgraph-checkpoint-postgres>=3.0.0",
  "asyncpg>=0.30.0",
  "psycopg[binary,pool]>=3.2.0",
  "loguru>=0.7.3",
  "minio>=7.2.0",
  "pillow>=10.0.0",
  "playwright>=1.40.0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "python-dotenv>=1.2.1",
  "qdrant-client>=1.16.2",
  "rich>=14.2.0",
  "sqlalchemy>=2.0.45",
  "structlog>=25.5.0",
  "uvicorn[standard]>=0.38.0",
  "websockets>=15.0.1",
  "python-multipart>=0.0.21",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "W293"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "webtest: tests that需要访问真实站点/浏览器的用例",
]
